--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ google-generativeai==0.5.0
 googleapis-common-protos==1.63.0
 grpcio==1.62.1
 grpcio-status==1.62.1
+gunicorn==22.0.0
 httplib2==0.22.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+packaging==24.0
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
