--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ httplib2==0.22.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+oauth2==1.9.0.post1
+oauthlib==3.2.2
 packaging==24.0
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -25,8 +27,10 @@ pyasn1_modules==0.4.0
 pyparsing==3.1.2
 python-dotenv==1.0.1
 requests==2.31.0
+requests-oauthlib==1.3.1
 rsa==4.9
 setuptools==68.2.2
+tweepy==4.14.0
 uritemplate==4.1.1
 urllib3==2.2.1
 Werkzeug==3.0.2
