--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 blinker==1.7.0
+cachelib==0.13.0
 cachetools==5.3.3
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
+Flask-Session==0.8.0
 google-ai-generativelanguage==0.6.1
 google-api-core==2.18.0
 google-api-python-client==2.125.0
@@ -17,6 +19,7 @@ httplib2==0.22.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+msgspec==0.18.6
 oauth2==1.9.0.post1
 oauthlib==3.2.2
 packaging==24.0
