--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,10 @@ msgspec==0.18.6
 oauth2==1.9.0.post1
 oauthlib==3.2.2
 packaging==24.0
+peewee==3.17.3
 proto-plus==1.23.0
 protobuf==4.25.3
+psycopg2==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
