Remove useless middleware function

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
-XAI_API_KEY='my_xai_api_key'
+CLIENT_ID=
+REDIRECT_URI=
+CLIENT_SECRET=
+
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+
+XAI_API_KEY=
